Fixed menu item spacing issue

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,6 +5,7 @@
 .link a {
     text-decoration: none;
     margin-left: 10px;
+    margin-right: 10px;
     font-size: 60px;
     color: #49494b;
     font-family: 'Source Sans Pro', sans-serif;
